--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,22 +17,6 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Build Docker image
-        run: docker build -t cron .
-
-      - name: start container
-        run: |
-          docker run -d cron
-
-      - name: Wait for app startup
-        run: |
-          sleep 3
-
-      - name: cleanup
-        run: |  
-          docker stop cron
-          docker rm -f cron
-
       - name: Log in to Docker Hub
         #if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
@@ -47,8 +31,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/metrics:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/metrics:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cronjob:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/cronjob:${{ github.sha }}
 
       - name: Inject Docker Prefix (In-Place) and Deploy
         #if: github.ref == 'refs/heads/main'
